# topology

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
docs/: 00-release_notes.md  01-downloads.md  02-installation.md  conf.py  index.rst  index.rst_backup
docs/figures/: logo
docs/source/: example1.rst  generalintro.rst
example_v02/02-ReadXSD_InfoHeadTail/: Polyethylene2.xsd
example_v02/03-ReadXSD_AC_InfoHeadTail/: 00-Cubic_C9_4Ch.xsd
examples/01-Benzene_at_hand/: benzene_at_hand.py
examples/02-PE_04br_xsd/: PE300_04br04.gro  PE300_04br04.xyz  example02.md  pe_scb.py
examples/03-PE-EVA_blend_xsd/: blend.gro  blend.py  blend.xsd  blend.xyz  example03.md
examples/04-PE-EVA_blend2_xsd/: blend2.gro  blend2.py  blend2.xsd  blend2.xyz
examples/05-PHA_20Ch_100/: poly4hb_100.py
examples/06-Other/: 64_3HB_30.py  64_3HB_alfa_30.gro  64_3HB_alfa_30.xyz
examples/07-ReadMol2/: 64_3HB_30.py  64_3HB_alfa_30.gro  64_3HB_alfa_30.xyz
test/: run_test.sh
topology/: BasicFormat.py  ExtTrajectory.py  GromacsFormat.py  MolecularGraph.py  RaspaFormat.py  Segment.py  Topology.py  __init__.py  atomic_data.py  chirality_from_coordinates.py  internal_coordinates.py  topology_cmd.py
topology_cmd/: __init__.py  assign_name_helix_curdlan.py  check_topology_pdb_psf_cmd.py  create_index_dih_carb_cmd.py  improper_test.py  label_pdb_withoutrenumber_cmd.py  multiplePDBs_to_XTC.py  multiplePDBs_to_XTC_parallel.py  topology_cmd.py  typing_carb_cmd.py  typing_gases_to_VLE_cmd.py
utils/: Logger.py  __init__.py  parse_arguments.py  utils.py
(+446 files in other folders)
