[metadata]
name = topology
version = attr: version.__version__
description = Python toolkit to create topology information of molecules.
long_description = file: README.md
author = Javier Ramos
author_email = jrdcasa@gmail.com

[options]
zip_safe = false
packages = find:
test_suite = test
include_package_data = true

[options.packages.find]
exclude =
    docs
    test
    dist
    build

[bdist_wheel]
universal = true

