[metadata]
name = topology
version = attr: version.__version__
description = Python toolkit to create topology information of molecules.
long_description = file: README.md
author = Javier Ramos
author_email = jrdcasa@gmail.com

[options]
zip_safe = false
packages = find:
test_suite = test
include_package_data = true

[options.packages.find]
exclude =
    docs
    test
    dist
    build

[options.entry_points]
console_scripts =
    topology_cmd = topology_cmd.topology_cmd:main_app
    check_topology_pdb_psf_cmd = topology_cmd.check_topology_pdb_psf_cmd:main_app
    label_pdb_withoutrenumber_cmd = topology_cmd.label_pdb_withoutrenumber_cmd:main_app

[bdist_wheel]
universal = true

